<resources>
    <string name="app_name">WorkshopW2</string>
    <string name="defaultPassword">Password</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="cls">clear</string>
    <string name="ok">OK</string>
    <string name="label">Please enter password</string>
    <string name="validPass">Login Successful</string>
    <string name="invalidPass">Wrong Password</string>
    <string name="again">Try Again</string>
</resources>
